--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "An online version of the egyptian ratscrew terminal game",
   "main": "client.js",
   "dependencies": {
-    "keypress": "^0.2.1"
+    "keypress": "^0.2.1",
+    "native-clip": "^0.5.1"
   },
   "devDependencies": {},
   "scripts": {
